--- a/src/app/images/loading/loading.component.scss
+++ b/src/app/images/loading/loading.component.scss
@@ -24,25 +24,27 @@
 
     @keyframes wave-r-secondary {
       0%,
-      50%,
       100% {
-        r: 2;
+        r: 2.5;
       }
-      25%,
-      75% {
+      25% {
         r: 3;
+      }
+      75% {
+        r: 2;
       }
     }
 
     @keyframes wave-r-primary {
       0%,
-      50%,
       100% {
-        r: 3;
+        r: 2.5;
       }
-      25%,
-      75% {
+      25% {
         r: 2;
+      }
+      75% {
+        r: 3;
       }
     }
 
