--- a/src/styles/pdz-themes/_classic.scss
+++ b/src/styles/pdz-themes/_classic.scss
@@ -101,12 +101,12 @@ $theme: (
     scrim: "black",
 
     // Logo Colors
-    logo-ring-1: "orange-300",
-    logo-ring-2: "orange-350",
-    logo-ring-3: "orange-400",
-    logo-ring-4: "orange-450",
-    logo-ring-5: "orange-500",
-    logo-ring-6: "orange-550",
+    logo-ring-1: "orange-200",
+    logo-ring-2: "orange-300",
+    logo-ring-3: "orange-350",
+    logo-ring-4: "orange-400",
+    logo-ring-5: "orange-450",
+    logo-ring-6: "orange-500",
     logo-ring-7: "orange-600",
     logo-core-1: "white",
     logo-core-2: "logo-core-color",
@@ -121,24 +121,26 @@ $theme: (
     loading-secondary-low: "orange-400",
 
     // Semantic Data Colors
-    positive: "emerald-700",
-    on-positive: "white",
-    positive-container: "emerald-100",
-    on-positive-container: "emerald-950",
-    negative: "rose-800",
-    on-negative: "white",
-    negative-container: "rose-100",
-    on-negative-container: "rose-950",
+    positive: "mint-400",
+    on-positive: "mint-950",
+    positive-container: "mint-900",
+    on-positive-container: "mint-100",
+    negative: "rose-250",
+    on-negative: "rose-950",
+    negative-container: "rose-900",
+    on-negative-container: "rose-100",
 
     // Scale Colors
-    scale-positive-1: "emerald-100",
-    scale-positive-2: "emerald-200",
-    scale-positive-3: "emerald-300",
-    scale-positive-4: "emerald-400",
-    scale-positive-5: "emerald-500",
-    scale-positive-6: "emerald-600",
-    scale-positive-7: "emerald-700",
     scale-neutral: "gray-200",
+    scale-positive: "mint-300",
+    scale-negative: "rose-300",
+    scale-positive-1: "mint-100",
+    scale-positive-2: "mint-200",
+    scale-positive-3: "mint-300",
+    scale-positive-4: "mint-400",
+    scale-positive-5: "mint-500",
+    scale-positive-6: "mint-600",
+    scale-positive-7: "mint-700",
     scale-negative-1: "rose-100",
     scale-negative-2: "rose-200",
     scale-negative-3: "rose-300",
@@ -249,11 +251,11 @@ $theme: (
 
     logo-ring-1: "orange-200",
     logo-ring-2: "orange-300",
-    logo-ring-3: "orange-400",
-    logo-ring-4: "orange-450",
-    logo-ring-5: "orange-500",
-    logo-ring-6: "orange-600",
-    logo-ring-7: "orange-700",
+    logo-ring-3: "orange-350",
+    logo-ring-4: "orange-400",
+    logo-ring-5: "orange-450",
+    logo-ring-6: "orange-500",
+    logo-ring-7: "orange-600",
     logo-core-1: "white",
     logo-core-2: "logo-core-color",
     logo-top: "cyan-500",
@@ -266,23 +268,25 @@ $theme: (
     loading-secondary-high: "orange-600",
     loading-secondary-low: "orange-400",
 
-    positive: "emerald-400",
-    on-positive: "emerald-950",
-    positive-container: "emerald-900",
-    on-positive-container: "emerald-100",
-    negative: "rose-250",
-    on-negative: "rose-950",
-    negative-container: "rose-900",
-    on-negative-container: "rose-100",
+    positive: "mint-700",
+    on-positive: "white",
+    positive-container: "mint-100",
+    on-positive-container: "mint-950",
+    negative: "rose-800",
+    on-negative: "white",
+    negative-container: "rose-100",
+    on-negative-container: "rose-950",
 
-    scale-positive-1: "emerald-950",
-    scale-positive-2: "emerald-900",
-    scale-positive-3: "emerald-850",
-    scale-positive-4: "emerald-800",
-    scale-positive-5: "emerald-750",
-    scale-positive-6: "emerald-700",
-    scale-positive-7: "emerald-650",
     scale-neutral: "gray-700",
+    scale-positive: "mint-850",
+    scale-negative: "rose-850",
+    scale-positive-1: "mint-950",
+    scale-positive-2: "mint-900",
+    scale-positive-3: "mint-850",
+    scale-positive-4: "mint-800",
+    scale-positive-5: "mint-750",
+    scale-positive-6: "mint-700",
+    scale-positive-7: "mint-650",
     scale-negative-1: "rose-950",
     scale-negative-2: "rose-900",
     scale-negative-3: "rose-850",
