--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
-@use "pdz-themes/normal" as normal;
-@use "pdz-themes/forest" as forest;
+@use "pdz-themes/classic" as classic;
+@use "pdz-themes/shiny" as shiny;
 @use "pdz-themes/sunset" as sunset;
 
 $themes: (
-  normal: normal.$theme,
-  forest: forest.$theme,
+  classic: classic.$theme,
+  shiny: shiny.$theme,
   sunset: sunset.$theme,
 );
