--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -3,7 +3,7 @@ $core-tokens: (
   "white": #ffffff,
   "black": #000000,
 
-  // Gray Scale
+  // Gray
   "gray-50": #f9f9f9,
   "gray-100": #ebebeb,
   "gray-150": #dedede,
@@ -24,257 +24,257 @@ $core-tokens: (
   "gray-900": #141414,
   "gray-950": #060606,
 
-  // Purple
-  "purple-50": #eee6ff,
-  "purple-100": #dccdfe,
-  "purple-150": #cbb4fc,
-  "purple-200": #bb9cfb,
-  "purple-250": #ab84f8,
-  "purple-300": #9d6ff6,
-  "purple-350": #915cf2,
-  "purple-400": #864bee,
-  "purple-450": #7d3be8,
-  "purple-500": #752ee1,
-  "purple-550": #6d23d8,
-  "purple-600": #651acd,
-  "purple-650": #5d12bf,
-  "purple-700": #530cae,
-  "purple-750": #490799,
-  "purple-800": #3e0483,
-  "purple-850": #32026a,
-  "purple-900": #25014f,
-  "purple-950": #180033,
-
   // Pink
-  "pink-50": #ffcce0,
-  "pink-100": #feb6d1,
-  "pink-150": #fca0c3,
-  "pink-200": #fb8ab4,
-  "pink-250": #f876a4,
-  "pink-300": #f66395,
-  "pink-350": #f25286,
-  "pink-400": #ee4277,
-  "pink-450": #e83569,
-  "pink-500": #e1295a,
-  "pink-550": #d81f4c,
-  "pink-600": #cd1740,
-  "pink-650": #bf1034,
-  "pink-700": #ae0b29,
-  "pink-750": #990620,
-  "pink-800": #830418,
-  "pink-850": #6a0212,
-  "pink-900": #4f000c,
-  "pink-950": #330008,
+  "pink-50": #ffeff5,
+  "pink-100": #fed7e6,
+  "pink-150": #fcbfd6,
+  "pink-200": #fba7c6,
+  "pink-250": #f890b6,
+  "pink-300": #f67ba6,
+  "pink-350": #f26896,
+  "pink-400": #ee5786,
+  "pink-450": #e84876,
+  "pink-500": #e13b67,
+  "pink-550": #d83059,
+  "pink-600": #cd264b,
+  "pink-650": #bf1d3e,
+  "pink-700": #ae1633,
+  "pink-750": #991129,
+  "pink-800": #830c20,
+  "pink-850": #6a0818,
+  "pink-900": #4f0511,
+  "pink-950": #33030a,
 
-  // Cyan
-  "cyan-50": #e6feff,
-  "cyan-100": #cdfbfe,
-  "cyan-150": #b4f7fc,
-  "cyan-200": #9cf3fb,
-  "cyan-250": #84ecf8,
-  "cyan-300": #6fe3f6,
-  "cyan-350": #5cd8f2,
-  "cyan-400": #4bcbee,
-  "cyan-450": #3bbbe8,
-  "cyan-500": #2eaae1,
-  "cyan-550": #2397d8,
-  "cyan-600": #1a84cd,
-  "cyan-650": #1272bf,
-  "cyan-700": #0c60ae,
-  "cyan-750": #074f99,
-  "cyan-800": #043f83,
-  "cyan-850": #02306a,
-  "cyan-900": #01234f,
-  "cyan-950": #001633,
-
-  // Orange
-  "orange-50": #fff0e6,
-  "orange-100": #fee1cd,
-  "orange-150": #fcd1b4,
-  "orange-200": #fbc29c,
-  "orange-250": #f8b284,
-  "orange-300": #f6a26f,
-  "orange-350": #f2925c,
-  "orange-400": #ee824b,
-  "orange-450": #e8723b,
-  "orange-500": #e1622e,
-  "orange-550": #d85423,
-  "orange-600": #cd461a,
-  "orange-650": #bf3912,
-  "orange-700": #ae2d0c,
-  "orange-750": #992407,
-  "orange-800": #831b04,
-  "orange-850": #6a1402,
-  "orange-900": #4f0e01,
-  "orange-950": #330800,
+  // Rose
+  "rose-50": #fff5f6,
+  "rose-100": #fee0e2,
+  "rose-150": #fccace,
+  "rose-200": #fbb5bb,
+  "rose-250": #f8a2a8,
+  "rose-300": #f68f96,
+  "rose-350": #f27e86,
+  "rose-400": #ee6f76,
+  "rose-450": #e86168,
+  "rose-500": #e1545b,
+  "rose-550": #d8494f,
+  "rose-600": #cd3f44,
+  "rose-650": #bf353a,
+  "rose-700": #ae2d30,
+  "rose-750": #992528,
+  "rose-800": #831d20,
+  "rose-850": #6a1718,
+  "rose-900": #4f1011,
+  "rose-950": #330a0b,
 
   // Red
-  "red-50": #ffe6e6,
-  "red-100": #fecdcd,
-  "red-150": #fcb4b4,
-  "red-200": #fb9c9c,
-  "red-250": #f88484,
-  "red-300": #f66f6f,
-  "red-350": #f25c5c,
-  "red-400": #ee4b4b,
-  "red-450": #e83b3b,
-  "red-500": #e12e2e,
-  "red-550": #d82323,
-  "red-600": #cd1a1a,
-  "red-650": #bf1212,
-  "red-700": #ae0c0c,
-  "red-750": #990707,
+  "red-50": #fff2f2,
+  "red-100": #fed8d8,
+  "red-150": #fcbebe,
+  "red-200": #fba4a4,
+  "red-250": #f88c8c,
+  "red-300": #f67575,
+  "red-350": #f26161,
+  "red-400": #ee4f4f,
+  "red-450": #e83f3f,
+  "red-500": #e13131,
+  "red-550": #d82525,
+  "red-600": #cd1b1b,
+  "red-650": #bf1313,
+  "red-700": #ae0d0d,
+  "red-750": #990808,
   "red-800": #830404,
   "red-850": #6a0202,
   "red-900": #4f0101,
   "red-950": #330000,
 
+  // Orange
+  "orange-50": #fff8f2,
+  "orange-100": #fee8d8,
+  "orange-150": #fcd7be,
+  "orange-200": #fbc7a4,
+  "orange-250": #f8b68c,
+  "orange-300": #f6a575,
+  "orange-350": #f29561,
+  "orange-400": #ee844f,
+  "orange-450": #e8743f,
+  "orange-500": #e16431,
+  "orange-550": #d85525,
+  "orange-600": #cd471b,
+  "orange-650": #bf3a13,
+  "orange-700": #ae2e0d,
+  "orange-750": #992408,
+  "orange-800": #831b04,
+  "orange-850": #6a1402,
+  "orange-900": #4f0e01,
+  "orange-950": #330800,
+
   // Amber
-  "amber-50": #fff9e6,
-  "amber-100": #fef2cd,
-  "amber-150": #fcebb4,
-  "amber-200": #fbe49c,
-  "amber-250": #f8dc84,
-  "amber-300": #f6d46f,
-  "amber-350": #f2cb5c,
-  "amber-400": #eec24b,
-  "amber-450": #e8b83b,
-  "amber-500": #e1ad2e,
-  "amber-550": #d8a123,
-  "amber-600": #cd951a,
-  "amber-650": #bf8712,
-  "amber-700": #ae780c,
-  "amber-750": #996807,
+  "amber-50": #fffcf2,
+  "amber-100": #fef5d8,
+  "amber-150": #fcedbe,
+  "amber-200": #fbe6a4,
+  "amber-250": #f8de8c,
+  "amber-300": #f6d575,
+  "amber-350": #f2cc61,
+  "amber-400": #eec34f,
+  "amber-450": #e8b93f,
+  "amber-500": #e1ae31,
+  "amber-550": #d8a225,
+  "amber-600": #cd951b,
+  "amber-650": #bf8713,
+  "amber-700": #ae780d,
+  "amber-750": #996808,
   "amber-800": #835704,
   "amber-850": #6a4602,
   "amber-900": #4f3401,
   "amber-950": #332100,
 
   // Yellow
-  "yellow-50": #ffffe6,
-  "yellow-100": #fefecd,
-  "yellow-150": #fcfcb4,
-  "yellow-200": #fbfb9c,
-  "yellow-250": #f8f884,
-  "yellow-300": #f6f66f,
-  "yellow-350": #f2f25c,
-  "yellow-400": #eeee4b,
-  "yellow-450": #e8e83b,
-  "yellow-500": #e1e12e,
-  "yellow-550": #d8d823,
-  "yellow-600": #cdcd1a,
-  "yellow-650": #bfbf12,
-  "yellow-700": #aeae0c,
-  "yellow-750": #999907,
-  "yellow-800": #838304,
-  "yellow-850": #6a6a02,
-  "yellow-900": #4f4f01,
-  "yellow-950": #333300,
+  "yellow-50": #fffdf2,
+  "yellow-100": #fef7d8,
+  "yellow-150": #fcf1be,
+  "yellow-200": #fbeba4,
+  "yellow-250": #f8e68c,
+  "yellow-300": #f6e175,
+  "yellow-350": #f2dc61,
+  "yellow-400": #eed74f,
+  "yellow-450": #e8d13f,
+  "yellow-500": #e1cb31,
+  "yellow-550": #d8c425,
+  "yellow-600": #cdbb1b,
+  "yellow-650": #bfaf13,
+  "yellow-700": #aea00d,
+  "yellow-750": #998e08,
+  "yellow-800": #837904,
+  "yellow-850": #6a6202,
+  "yellow-900": #4f4a01,
+  "yellow-950": #333000,
+
+  // Lime
+  "lime-50": #f2fff6,
+  "lime-100": #d8fee2,
+  "lime-150": #befccd,
+  "lime-200": #a4fbb8,
+  "lime-250": #8cf8a2,
+  "lime-300": #75f68c,
+  "lime-350": #61f275,
+  "lime-400": #4fee5e,
+  "lime-450": #3fe847,
+  "lime-500": #31e131,
+  "lime-550": #2ed825,
+  "lime-600": #2dcd1b,
+  "lime-650": #2cbf13,
+  "lime-700": #29ae0d,
+  "lime-750": #269908,
+  "lime-800": #228304,
+  "lime-850": #1c6a02,
+  "lime-900": #154f01,
+  "lime-950": #0e3300,
 
   // Green
-  "green-50": #e6ffee,
-  "green-100": #cdfedd,
-  "green-150": #b4fccc,
-  "green-200": #9cfbbb,
-  "green-250": #84f8ab,
-  "green-300": #6ff69c,
-  "green-350": #5cf28e,
-  "green-400": #4bee81,
-  "green-450": #3be875,
-  "green-500": #2ee16a,
-  "green-550": #23d860,
-  "green-600": #1acd56,
-  "green-650": #12bf4c,
-  "green-700": #0cae42,
-  "green-750": #079938,
+  "green-50": #f2fff7,
+  "green-100": #d8fee5,
+  "green-150": #befcd3,
+  "green-200": #a4fbc1,
+  "green-250": #8cf8b0,
+  "green-300": #75f6a0,
+  "green-350": #61f291,
+  "green-400": #4fee84,
+  "green-450": #3fe877,
+  "green-500": #31e16c,
+  "green-550": #25d861,
+  "green-600": #1bcd56,
+  "green-650": #13bf4c,
+  "green-700": #0dae42,
+  "green-750": #089938,
   "green-800": #04832e,
   "green-850": #026a24,
   "green-900": #014f1b,
   "green-950": #003311,
 
-  // Emerald
-  "emerald-50": #e6ffee,
-  "emerald-100": #cdfedd,
-  "emerald-150": #b4fccd,
-  "emerald-200": #9cfbbe,
-  "emerald-250": #84f8b2,
-  "emerald-300": #6ff6a8,
-  "emerald-350": #5cf2a0,
-  "emerald-400": #4bee9c,
-  "emerald-450": #3be89a,
-  "emerald-500": #2ee199,
-  "emerald-550": #23d898,
-  "emerald-600": #1acd95,
-  "emerald-650": #12bf90,
-  "emerald-700": #0cae88,
-  "emerald-750": #07997b,
-  "emerald-800": #04836b,
-  "emerald-850": #026a58,
-  "emerald-900": #014f43,
-  "emerald-950": #00332b,
+  // Mint
+  "mint-50": #f5fff8,
+  "mint-100": #e0feea,
+  "mint-150": #cafcdc,
+  "mint-200": #b5fbcf,
+  "mint-250": #a2f8c3,
+  "mint-300": #8ff6ba,
+  "mint-350": #7ef2b3,
+  "mint-400": #6feeae,
+  "mint-450": #61e8ab,
+  "mint-500": #54e1a8,
+  "mint-550": #49d8a5,
+  "mint-600": #3fcda1,
+  "mint-650": #35bf9a,
+  "mint-700": #2dae8f,
+  "mint-750": #259981,
+  "mint-800": #1d8370,
+  "mint-850": #176a5c,
+  "mint-900": #104f45,
+  "mint-950": #0a332d,
 
-  // Lime
-  "lime-50": #e6ffec,
-  "lime-100": #cdfeda,
-  "lime-150": #b4fcc6,
-  "lime-200": #9cfbb2,
-  "lime-250": #84f89d,
-  "lime-300": #6ff687,
-  "lime-350": #5cf271,
-  "lime-400": #4bee5a,
-  "lime-450": #3be844,
-  "lime-500": #2fe12e,
-  "lime-550": #2dd823,
-  "lime-600": #2ccd1a,
-  "lime-650": #2bbf12,
-  "lime-700": #29ae0c,
-  "lime-750": #269907,
-  "lime-800": #218304,
-  "lime-850": #1c6a02,
-  "lime-900": #154f01,
-  "lime-950": #0e3300,
-
-  //Rose
-  "rose-50": #ffe6ef,
-  "rose-100": #fecddf,
-  "rose-150": #fcb4cf,
-  "rose-200": #fb9cbf,
-  "rose-250": #f884ae,
-  "rose-300": #f66f9d,
-  "rose-350": #f25c8d,
-  "rose-400": #ee4b7d,
-  "rose-450": #e83b6d,
-  "rose-500": #e12e5e,
-  "rose-550": #d8234f,
-  "rose-600": #cd1a42,
-  "rose-650": #bf1235,
-  "rose-700": #ae0c2a,
-  "rose-750": #990721,
-  "rose-800": #830419,
-  "rose-850": #6a0212,
-  "rose-900": #4f010c,
-  "rose-950": #330008,
+  // Cyan
+  "cyan-50": #f2feff,
+  "cyan-100": #d8fcfe,
+  "cyan-150": #bef8fc,
+  "cyan-200": #a4f3fb,
+  "cyan-250": #8cedf8,
+  "cyan-300": #75e4f6,
+  "cyan-350": #61d9f2,
+  "cyan-400": #4fccee,
+  "cyan-450": #3fbce8,
+  "cyan-500": #31abe1,
+  "cyan-550": #2598d8,
+  "cyan-600": #1b85cd,
+  "cyan-650": #1372bf,
+  "cyan-700": #0d60ae,
+  "cyan-750": #084f99,
+  "cyan-800": #043f83,
+  "cyan-850": #02306a,
+  "cyan-900": #01234f,
+  "cyan-950": #001633,
 
   // Blue
-  "blue-50": #e6f6ff,
-  "blue-100": #cdecfe,
-  "blue-150": #b4e1fc,
-  "blue-200": #9cd5fb,
-  "blue-250": #84c7f8,
-  "blue-300": #6fb9f6,
-  "blue-350": #5ca9f2,
-  "blue-400": #4b97ee,
-  "blue-450": #3b85e8,
-  "blue-500": #2e71e1,
-  "blue-550": #235ed8,
-  "blue-600": #1a4ccd,
-  "blue-650": #123bbf,
-  "blue-700": #0c2cae,
-  "blue-750": #072099,
+  "blue-50": #f2faff,
+  "blue-100": #d8f0fe,
+  "blue-150": #bee4fc,
+  "blue-200": #a4d8fb,
+  "blue-250": #8ccaf8,
+  "blue-300": #75bcf6,
+  "blue-350": #61abf2,
+  "blue-400": #4f99ee,
+  "blue-450": #3f86e8,
+  "blue-500": #3173e1,
+  "blue-550": #255fd8,
+  "blue-600": #1b4dcd,
+  "blue-650": #133cbf,
+  "blue-700": #0d2dae,
+  "blue-750": #082199,
   "blue-800": #041783,
   "blue-850": #02106a,
   "blue-900": #010a4f,
   "blue-950": #000633,
+
+  // Purple
+  "purple-50": #f6f2ff,
+  "purple-100": #e4d8fe,
+  "purple-150": #d2befc,
+  "purple-200": #c0a4fb,
+  "purple-250": #b08cf8,
+  "purple-300": #a175f6,
+  "purple-350": #9461f2,
+  "purple-400": #894fee,
+  "purple-450": #7f3fe8,
+  "purple-500": #7631e1,
+  "purple-550": #6e25d8,
+  "purple-600": #661bcd,
+  "purple-650": #5d13bf,
+  "purple-700": #540dae,
+  "purple-750": #490899,
+  "purple-800": #3e0483,
+  "purple-850": #32026a,
+  "purple-900": #25014f,
+  "purple-950": #180033,
 
   // Logo Specific
   "logo-core-color": #9c65aa
