--- a/src/styles/pdz-themes/_sunset.scss
+++ b/src/styles/pdz-themes/_sunset.scss
@@ -4,15 +4,15 @@ $theme: (
   light: (
     // Surface Colors
     background: "white",
-    surface: "gray-50",
-    surface-variant: "gray-300",
+    surface: "orange-50",
+    surface-variant: "orange-300",
     surface-container-lowest: "white",
-    surface-container-low: "gray-50",
-    surface-container: "gray-100",
-    surface-container-high: "gray-200",
-    surface-container-highest: "gray-300",
-    on-surface: "gray-950",
-    on-surface-variant: "gray-900",
+    surface-container-low: "orange-50",
+    surface-container: "orange-100",
+    surface-container-high: "orange-200",
+    surface-container-highest: "orange-300",
+    on-surface: "orange-950",
+    on-surface-variant: "orange-900",
     outline: "gray-550",
     outline-variant: "gray-300",
 
@@ -101,13 +101,13 @@ $theme: (
     scrim: "black",
 
     // Logo Colors
-    logo-ring-1: "pink-300",
-    logo-ring-2: "pink-350",
-    logo-ring-3: "pink-400",
-    logo-ring-4: "pink-450",
-    logo-ring-5: "pink-500",
-    logo-ring-6: "pink-550",
-    logo-ring-7: "pink-600",
+    logo-ring-1: "orange-200",
+    logo-ring-2: "orange-300",
+    logo-ring-3: "orange-350",
+    logo-ring-4: "orange-400",
+    logo-ring-5: "orange-450",
+    logo-ring-6: "orange-500",
+    logo-ring-7: "orange-600",
     logo-core-1: "white",
     logo-core-2: "logo-core-color",
     logo-top: "purple-500",
@@ -121,34 +121,35 @@ $theme: (
     loading-secondary-low: "pink-400",
 
     // Semantic Data Colors
-    positive: "emerald-700",
-    on-positive: "white",
-    positive-container: "emerald-100",
-    on-positive-container: "emerald-950",
-    negative: "red-800",
-    on-negative: "white",
-    negative-container: "red-100",
-    on-negative-container: "red-950",
+    positive: "mint-400",
+    on-positive: "mint-950",
+    positive-container: "mint-900",
+    on-positive-container: "mint-100",
+    negative: "rose-250",
+    on-negative: "rose-950",
+    negative-container: "rose-900",
+    on-negative-container: "rose-100",
 
     // Scale Colors
-    scale-positive-1: "emerald-100",
-    scale-positive-2: "emerald-200",
-    scale-positive-3: "emerald-300",
-    scale-positive-4: "emerald-400",
-    scale-positive-5: "emerald-500",
-    scale-positive-6: "emerald-600",
-    scale-positive-7: "emerald-700",
     scale-neutral: "gray-200",
-    scale-negative-1: "red-100",
-    scale-negative-2: "red-200",
-    scale-negative-3: "red-300",
-    scale-negative-4: "red-400",
-    scale-negative-5: "red-500",
-    scale-negative-6: "red-600",
-    scale-negative-7: "red-700",
+    scale-positive: "mint-300",
+    scale-negative: "rose-300",
+    scale-positive-1: "mint-100",
+    scale-positive-2: "mint-200",
+    scale-positive-3: "mint-300",
+    scale-positive-4: "mint-400",
+    scale-positive-5: "mint-500",
+    scale-positive-6: "mint-600",
+    scale-positive-7: "mint-700",
+    scale-negative-1: "rose-100",
+    scale-negative-2: "rose-200",
+    scale-negative-3: "rose-300",
+    scale-negative-4: "rose-400",
+    scale-negative-5: "rose-500",
+    scale-negative-6: "rose-600",
+    scale-negative-7: "rose-700",
 
-    hero:
-      url("/assets/images/hero/abstract-color-wave-background-colorful-of-orange-pink-purple-yellow-background-illustration-vector.jpg"),
+    hero: url("/assets/images/hero/hero_sunset.webp"),
     debug: #ff00ff,
   ),
   dark: (
@@ -244,13 +245,13 @@ $theme: (
     shadow: "black",
     scrim: "black",
 
-    logo-ring-1: "pink-200",
-    logo-ring-2: "pink-300",
-    logo-ring-3: "pink-400",
-    logo-ring-4: "pink-450",
-    logo-ring-5: "pink-500",
-    logo-ring-6: "pink-600",
-    logo-ring-7: "pink-700",
+    logo-ring-1: "orange-200",
+    logo-ring-2: "orange-300",
+    logo-ring-3: "orange-350",
+    logo-ring-4: "orange-400",
+    logo-ring-5: "orange-450",
+    logo-ring-6: "orange-500",
+    logo-ring-7: "orange-600",
     logo-core-1: "white",
     logo-core-2: "logo-core-color",
     logo-top: "purple-500",
@@ -263,30 +264,32 @@ $theme: (
     loading-secondary-high: "pink-600",
     loading-secondary-low: "pink-400",
 
-    positive: "emerald-400",
-    on-positive: "emerald-950",
-    positive-container: "emerald-900",
-    on-positive-container: "emerald-100",
-    negative: "red-250",
-    on-negative: "red-950",
-    negative-container: "red-900",
-    on-negative-container: "red-100",
+    positive: "mint-700",
+    on-positive: "white",
+    positive-container: "mint-100",
+    on-positive-container: "mint-950",
+    negative: "rose-800",
+    on-negative: "white",
+    negative-container: "rose-100",
+    on-negative-container: "rose-950",
 
-    scale-positive-1: "emerald-950",
-    scale-positive-2: "emerald-900",
-    scale-positive-3: "emerald-850",
-    scale-positive-4: "emerald-800",
-    scale-positive-5: "emerald-750",
-    scale-positive-6: "emerald-700",
-    scale-positive-7: "emerald-650",
     scale-neutral: "gray-700",
-    scale-negative-1: "red-950",
-    scale-negative-2: "red-900",
-    scale-negative-3: "red-850",
-    scale-negative-4: "red-800",
-    scale-negative-5: "red-750",
-    scale-negative-6: "red-700",
-    scale-negative-7: "red-650",
+    scale-positive: "mint-850",
+    scale-negative: "rose-850",
+    scale-positive-1: "mint-950",
+    scale-positive-2: "mint-900",
+    scale-positive-3: "mint-850",
+    scale-positive-4: "mint-800",
+    scale-positive-5: "mint-750",
+    scale-positive-6: "mint-700",
+    scale-positive-7: "mint-650",
+    scale-negative-1: "rose-950",
+    scale-negative-2: "rose-900",
+    scale-negative-3: "rose-850",
+    scale-negative-4: "rose-800",
+    scale-negative-5: "rose-750",
+    scale-negative-6: "rose-700",
+    scale-negative-7: "rose-650",
 
     hero: linear-gradient(
         135deg,
