--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.scss
@@ -38,7 +38,7 @@
 
 .drafts-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
   gap: var(--pdz-space-lg);
 }
 
@@ -123,7 +123,7 @@
 
   .sprites {
     display: grid;
-    grid-template-columns: repeat(6, minmax(48px, 1fr));
+    grid-template-columns: repeat(6, minmax(36px, 1fr));
     gap: var(--pdz-space-sm);
   }
 }
