--- a/src/app/debug/sprites/debug-sprites.component.html
+++ b/src/app/debug/sprites/debug-sprites.component.html
@@ -1,7 +1,12 @@
+<input type="checkbox" #shiny />
+Shiny
 <div class="flex flex-wrap">
   @for (pokemon of names; track pokemon) {
     <div class="w-12" [matTooltip]="pokemon.id + ' ' + sprite.path">
-      <pdz-sprite [pokemon]="pokemon" #sprite></pdz-sprite>
+      <pdz-sprite
+        [pokemon]="{ id: pokemon.id, name: pokemon.name, shiny: shiny.checked }"
+        #sprite
+      ></pdz-sprite>
     </div>
   }
 </div>
