--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -10,9 +10,10 @@
   max-width: 30%;
   min-height: fit-content;
   max-height: fit-content;
-  max-height: 16rem;
   user-select: none;
   .sprite-wrapper {
+    max-height: 16rem;
+    max-width: 16rem;
     width: 100%;
     height: 100%;
   }
