--- a/src/app/drafts/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/drafts/draft-overview/draft-preview/draft-preview.component.html
@@ -20,7 +20,10 @@
           <div class="card-header">
             <h2 class="league-name">{{ draft.leagueName }}</h2>
             <div class="card-menu">
-              <button class="more-btn" (click)="toggleMenu(draft.leagueId)">
+              <button
+                class="more-btn"
+                (click)="toggleMenu(draft.leagueId, $event)"
+              >
                 <mat-icon>more_vert</mat-icon>
               </button>
 
