add tailwind overrides to use new theming

--- a/src/styles/tailwind-styles.scss
+++ b/src/styles/tailwind-styles.scss
@@ -61,3 +61,64 @@
 .mdc-notched-outline__notch {
   border-right: none;
 }
+
+.bg-aTeam-200 {
+  background-color: var(--pdz-color-primary-container-high) !important;
+}
+.bg-bTeam-200 {
+  background-color: var(--pdz-color-secondary-container-high) !important;
+}
+
+.bg-aTeam-300 {
+  background-color: var(--pdz-color-primary-container) !important;
+}
+
+.bg-bTeam-300 {
+  background-color: var(--pdz-color-secondary-container) !important;
+}
+
+.shadow-inner {
+  box-shadow: var(--pdz-level-inset-2) !important;
+}
+
+.shadow-md {
+  box-shadow: var(--pdz-level-2) !important;
+}
+
+.hover\:bg-aTeam-100:hover {
+  background-color: var(--pdz-color-primary-container-low) !important;
+}
+
+.hover\:bg-bTeam-100:hover {
+  background-color: var(--pdz-color-secondary-container-low) !important;
+}
+
+.border-aTeam-400,
+.border-aTeam-300,
+.border-aTeam-200 {
+  border-color: var(--pdz-color-primary-border) !important;
+}
+
+.border-bTeam-400,
+.border-bTeam-300,
+.border-bTeam-200 {
+  border-color: var(--pdz-color-secondary-border) !important;
+}
+
+.border-menu-500 {
+  border-color: var(--pdz-color-outline) !important;
+}
+
+.bg-menu-100,
+.bg-menu-200 {
+  background-color: var(--pdz-color-surface-container) !important;
+}
+
+.bg-menu-500 {
+  background-color: var(--pdz-color-menu) !important;
+  color: var(--pdz-color-on-menu) !important;
+}
+
+.hover\:bg-menu-700:hover {
+  background-color: var(--pdz-color-menu-hover) !important;
+}
